# RefDecoder

./: README.md  demo.py  inference_video.py  pyproject.toml  train.py
VBench_eval/: decode_refdecoder_vbench.py  decode_wanvae_vbench.py  generate_wan_latents_vbench.py
VBench_example/: decode_refdecoder_vbench.py  decode_wanvae_vbench.py  generate_wan_latents_vbench.py
configs/inference/: eval_videovaeplus.yaml  eval_wan.yaml
configs/train/: config_videovaeplus.yaml  config_wan.yaml
data/: dataset.py  latent_dataset.py  lightning_data.py
scripts/: run_inference.sh  run_train.sh
src/models/VideoVAEPlus/: autoencoder.py  autoencoder_temporal.py  videovaeplus_ref0conv.py
src/models/Wan/: autoencoder_wanT.py  transformer_wan.py  transformerwrapper.py
src/modules/: DCAE.py  attention.py
src/modules/losses/: __init__.py  contperceptual.py
utils/: attnScheduler.py  callbacks.py  debug_decoder.py  debug_decoderT.py  save_video.py  train_utils.py
