[project]
name = "refdecoder"
version = "0.1.0"
description = "RefDecoder: Reference-Conditioned Video VAE"
classifiers = ["License :: OSI Approved :: Apache Software License"]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "accelerate~=0.34.0",
    "academictorrents~=2.3.3",
    "albumentations~=1.4.16",
    "av~=12.0.0",
    "beautifulsoup4~=4.12.3",
    "decord~=0.6.0",
    "einops~=0.8.0",
    "fairscale~=0.4.13",
    "ftfy~=6.2.3",
    "huggingface-hub",
    "imageio~=2.33.1",
    "kornia~=0.7.3",
    "lpips",
    "more-itertools~=10.5.0",
    "moviepy~=1.0.3",
    "numpy~=1.26.3",
    "omegaconf~=2.3.0",
    "opencv-python~=4.9.0",
    "packaging~=24.0",
    "pandas~=2.2.1",
    "pillow~=10.4.0",
    "protobuf>=3.20,<4.0",
    "psutil~=6.0.0",
    "pytorch-lightning~=2.4.0",
    "pyyaml~=6.0.1",
    "requests~=2.32.3",
    "safetensors~=0.4.5",
    "scipy~=1.14.1",
    "sentencepiece~=0.2.0",
    "taming-transformers~=0.0.1",
    "tensorboard~=2.18.0",
    "tensorboardx~=2.6.2",
    "timm~=1.0.9",
    "torch==2.7.0",
    "torchaudio",
    "torchmetrics~=1.3.1",
    "torchvision",
    "tqdm~=4.66.2",
    "transformers~=4.56.2",
    "typing-extensions~=4.12.2",
    "xformers~=0.0.24",
    "datasets>=4.1.1",
    "wandb>=0.22.2",
    "deepspeed>=0.18.2",
    "scikit-image>=0.25.2",
    "peft>=0.18.0",
    "matplotlib>=3.10.7",
    "nvitop>=1.6.2",
    "diffusers>=0.36.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29",
    "notebook>=7.2",
    "pip>=24.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["logs/", "ckpt/", "wanlogs/", "debug/", "examples/", "image_logs/", "wandb_logs/"]

[tool.hatch.build.targets.wheel]
packages = ["src/", "utils/", "data/", "evaluation/"]

[tool.uv]
no-build-isolation-package = []
